Work,Client section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,7 +206,7 @@ section.services .section-heading{
 
 section.services .card-wrapper .card{
     background: var(--pure);
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
     padding: 3rem 2rem;
     position: relative;
     padding-top: 5rem;
@@ -363,5 +363,203 @@ section.work .section-heading{
     padding-top: 70px;
 }
 
+section.work .container{
+    padding-bottom: 50px;
+}
 
 /* ******************************  Work Section End  *************************************** */
+
+
+
+/* ******************************  Blog Section Start *************************************** */
+
+
+section.blog{
+    background: var(--dark);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 78% 90%, 0 100%);
+}
+
+section.blog .section-heading{
+    color: var(--pure);
+}
+
+section.blog .card-wrapper{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 3rem;
+}
+
+section.blog .card-wrapper .card{
+    background: var(--pure);
+}
+
+
+section.blog .card-wrapper .card .card-content {
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+
+section.blog .card-wrapper .card-content h1{
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+section.blog .card-wrapper .card-content a{
+    color: var(--secondary);
+    text-decoration: none;
+}
+
+section.blog .card-wrapper .card-content span{
+    color: var(--ternary);
+    font-size: 0.8rem;
+}
+
+section.blog .card-wrapper .card-content p{
+    font-family: 'lato',sans-serif;
+    color: var(--ternary);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+section.blog .card-wrapper .card-content a.read-more{
+    font-size: 0.8rem;
+}
+
+section.blog .card-wrapper .card-content a:hover{
+    color: var(--primary);
+}
+
+section.blog .section-heading{
+    padding-top: 70px;
+}
+
+section.blog .card-wrapper{
+    padding-bottom: 180px;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+
+/* ******************************  Blog Section End  *************************************** */
+
+
+
+/* ******************************  Contact Section Start  ********************************** */
+
+
+
+section.contact .card-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 2rem;
+    
+}
+
+section.contact .card-wrapper .card {
+    text-align: center;
+}
+
+section.contact .card-wrapper .card img{
+    margin-bottom: 3rem;
+}
+
+section.contact .card-wrapper .extra img{
+    margin-bottom:4rem;
+}
+
+section.contact .card-wrapper .card h1{
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+section.contact .card-wrapper .card h6{
+    font-size: 1rem;
+    color: var(--ternary);
+    font-weight: 400;
+    margin-bottom: 4rem;
+}
+
+section.contact .section-heading{
+    padding-top: 70px;
+}
+
+
+section.contact .input-wrap {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    margin-bottom: 2rem;
+}
+
+section.contact .input-wrap-2{
+    display: flex;
+    flex-direction: column;
+} 
+
+section.contact input{
+    padding: 0.5rem;
+    border: 1px solid var(--light);
+    font-size: 0.9rem;
+} 
+
+section.contact .input-wrap-2 input{
+    margin-bottom: 2rem;
+}
+
+section.contact .input-wrap-2 textarea{
+    padding: 0.5rem;
+    border: 1px solid var(--light);
+    font-size: 0.9rem;
+}
+
+section.contact input:focus{
+    outline: none;
+}
+
+section.contact .input-wrap-2 textarea:focus{
+    outline: none;
+}
+
+section.contact .btn-wrapper {
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+
+/* ******************************  Contact Section End  ************************************ */
+
+
+/* ******************************  Footer Section Start  *********************************** */
+
+
+footer{
+    background: var(--dark);
+    text-align: center;
+    padding: 3rem 0;
+}
+
+footer .footer-logo {
+    margin-bottom: 3rem;
+    width: 150px;
+}
+
+footer .footer-socials a{
+    margin-right: 1rem;
+    color:white;
+    margin-bottom: 2rem;
+}
+
+footer .copyright {
+    color: var(--ternary);
+    margin-top: 2rem;
+}
+
+footer .footer-socials{
+    margin-right: -1rem;
+}
+
+
+/* ****************************** Footer Section End  ************************************** */
